--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,7 +3,7 @@ loaderVersion="[28,)"
 
 [[mods]]
 modId="dogtags"
-version="1.14.4-1.0.0.1"
+version="1.15.x-2.0.0.0"
 displayName="DogTags"
 authors="Choco"
 description='''
@@ -13,12 +13,12 @@ Give collars to your pets (wolves and cats) and receive a final goodbye from you
 [[dependencies.dogtags]]
     modId="forge" #mandatory
     mandatory=true #mandatory
-    versionRange="[28,)" #mandatory
+    versionRange="[29,32)" #mandatory
     ordering="NONE"
     side="BOTH"
 [[dependencies.dogtags]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.14.4]"
+    versionRange="[1.15.0, 1.15.2]"
     ordering="NONE"
     side="BOTH"
