--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 
-version = '1.15.0-2.0.0.0'
+version = '1.15.x-2.0.0.0'
 group = 'wtf.choco'
 archivesBaseName = 'dogtags'
 
